--- a/templates/actor/inventory.hbs
+++ b/templates/actor/inventory.hbs
@@ -1,5 +1,5 @@
 {{! Features Tab }}
-<section class='tab features {{tab.cssClass}}' data-group='primary' data-tab='inventory'>
+<section class='tab features scrollable {{tab.cssClass}}' data-group='primary' data-tab='inventory'>
   {{!-- <section class='grid grid-3col'>
     <aside class='sidebar'>
       {{! The grid classes are defined in scss/global/_grid.scss. To use,
