--- a/templates/actor/item.hbs
+++ b/templates/actor/item.hbs
@@ -11,6 +11,8 @@
     </div>
     <div class="flexrow">
       {{#if (and
+        (ne actorType 'caravan')
+        (ne item.system.size.unit 'cash')
         (eq item.system.type 'weapon')
         item.system.readied
         item.system.weapon.damage.base
@@ -28,6 +30,8 @@
       {{/if}}
 
       {{#if (and
+        (ne actorType 'caravan')
+        (ne item.system.size.unit 'cash')
         (eq item.system.type 'power')
         item.system.readied
         item.system.power.roll_formula
@@ -46,7 +50,7 @@
 
       {{#if (gt item.system.slots_taken 1)}}[{{item.system.slots_taken}}] {{/if}}
 
-      {{#if (eq item.system.size.unit 'cash')}} € {{item.system.quantity}} {{/if}}
+      {{#if (eq item.system.size.unit 'cash')}} {{item.system.quantity}} {{/if}}
       {{item.name}}
 
       {{#if (and (ne item.system.size.unit 'cash') (gt item.system.quantity 1))}}
@@ -64,6 +68,7 @@
   </div>
   <div class='item-controls'>
     {{#if @root.editable}}
+    {{#if (ne actorType 'caravan')}}
     <a class="item-control">
       <i
         class="fa-regular fa-shield {{ifThen item.system.readied 'readied' 'not-readied'}}"
@@ -76,6 +81,7 @@
       >
       </i>
     </a>
+    {{/if}}
     <a class="item-control">
       <i
         class="fa-regular fa-exchange"
